--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,5 @@ install: pipenv install
 script:
   - py.test tests
   - mypy --ignore-missing-imports --strict-optional --check-untyped-defs talepy/
+  - flake8 talepy tests
+  - isort --recursive --check-only talepy tests
