--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: python
 python:
   - "3.6"
   - "3.7"
-install: pipenv install
+install:
+  - pip install pipenv
+  - pipenv install
 script:
   - py.test tests
   - mypy --ignore-missing-imports --strict-optional --check-untyped-defs talepy/
