--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,9 @@ language: python
 python:
   - "3.6"
   - "3.7"
-install:
-  - pip install pipenv
-  - pipenv install
+install: pip install pipenv
 script:
-  - py.test tests
-  - mypy --ignore-missing-imports --strict-optional --check-untyped-defs talepy/
-  - flake8 talepy tests
-  - isort --recursive --check-only talepy tests
+  - pipenv run py.test tests
+  - pipenv run mypy --ignore-missing-imports --strict-optional --check-untyped-defs talepy/
+  - pipenv run flake8 talepy tests
+  - pipenv run isort --recursive --check-only talepy tests
