--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,4 @@ python:
   - "3.7"
 install: pip install pipenv
 script:
-  - pipenv run py.test tests
-  - pipenv run mypy --ignore-missing-imports --strict-optional --check-untyped-defs talepy/
-  - pipenv run flake8 talepy tests
-  - pipenv run isort --recursive --check-only talepy tests
+  - ./test.sh
