--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,11 @@ language: python
 python:
   - "3.6"
   - "3.7"
-install: pip install pipenv
+install:
+  - pip install pipenv
+  - pipenv install --system
 script:
-  - PIPENV_IGNORE_VIRTUALENVS=1 pipenv run py.test tests
-  - PIPENV_IGNORE_VIRTUALENVS=1 pipenv run mypy --ignore-missing-imports --strict-optional --check-untyped-defs talepy/
-  - PIPENV_IGNORE_VIRTUALENVS=1 pipenv run flake8 talepy tests
-  - PIPENV_IGNORE_VIRTUALENVS=1 pipenv run isort --recursive --check-only talepy tests
+  - py.test tests
+  - mypy --ignore-missing-imports --strict-optional --check-untyped-defs talepy/
+  - flake8 talepy tests
+  - isort --recursive --check-only talepy tests
