Fix test for import paths

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - pip install pipenv
   - pipenv install --dev
 script:
-  - pipenv run py.test tests
+  - pipenv run python -m pytest tests/
   - pipenv run mypy --ignore-missing-imports --strict-optional --check-untyped-defs talepy/
   - pipenv run flake8 talepy tests
   - pipenv run isort --recursive --check-only talepy tests
