--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ install:
   - pipenv install --dev
 script:
   - pipenv run python -m pytest tests/
-  - pipenv run mypy --ignore-missing-imports --strict-optional --check-untyped-defs talepy/
+  - pipenv run mypy --ignore-missing-imports --strict-optional --check-untyped-defs talepy/ tests/
   - pipenv run flake8 talepy tests
   - pipenv run isort --recursive --check-only talepy tests
